syntax = "proto3";
package pb;

option go_package =  "tenflix/lintang/order-aggregator-service/pb";


message CustomerDetails {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
}

message GetUser{
  string user_id =1;
}

message GetUserDetailRequest {
  GetUser getUser =1;
}

message GetUserDetailResponse {
  CustomerDetails userDetail = 1;
}

service UserService {
  rpc getUserDetail(GetUserDetailRequest) returns (GetUserDetailResponse);
}
